--- a/README
+++ b/README
@@ -5,5 +5,6 @@ Jestion v1.0
 - Press TRAIN to train data
 
 [Changelog]
+- Apply normalize input
 - Apply low-pass filter to each sensor
 - SVM training feature completed
