[Update] - Calculate min, max, mean, standard deviation - Feature class to contain features - Dataset class contains sample and response Mat

--- a/README
+++ b/README
@@ -5,6 +5,7 @@ Jestion v1.0
 - Press TRAIN to train data
 
 [Changelog]
+- Calculate min, max, mean, standard deviation
 - Apply normalize input
 - Apply low-pass filter to each sensor
 - SVM training feature completed
