[Update] - Calculate median absolute deviation, signal magnitude area

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Jestion v1.0
 - Press TRAIN to train data
 
 [Changelog]
-- Calculate min, max, mean, standard deviation
+- Calculate min, max, mean, standard deviation, median absolute deviation, signal magnitude area
 - Apply normalize input
 - Apply low-pass filter to each sensor
 - SVM training feature completed
